# bookverse-inventory

./: .gitignore  DESIGN.md  Dockerfile  Dockerfile.test  E2E_TEST.md  PLAN_OF_ACTION.md  README.md  comprehensive_bash_linter.sh  debug-platform-setup.yml  e2e-test.md  enhanced_summary_step.txt  final_bash_linter.sh  fix_summary.sed  investigate-jfrog-direct.yml  minimal_summary.txt  pyproject.toml  pytest.ini  regular-test.py  release-test.py  replace_summary.py  requirements.txt  simple_bash_analyzer.sh  simple_summary_step.txt  test-commit-filtering.md  test-coverage-evidence.json  test-manual-promotion.sh  test-skip-version.md  test-token-approaches.yml  validate_syntax.sh
.github/scripts/: apptrust_rollback.py  http_debug.sh  promote_lib.sh
.github/workflows/: apptrust-rollback.yml  attach-verified-evidence.yml  ci.yml  ci.yml.backup  diagnose-oidc.yml  docker-build-test.yml  fix-build-perms.yml  fix-buildinfo-perms.yml  fix-repo-envs.yml  promote.reusable.yml  promote.std.yml  promote.yml  promotion-rollback.yml  rollback-fixed.yml  test-manual-promotion.yml
.jfrog/: config.yml
app/: api.py  auth.py  config.py  database.py  main.py  models.py  schemas.py  services.py
app/data/: demo_books.json  demo_inventory.json
config/: version-map.yaml
docs/: API_REFERENCE.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  SERVICE_OVERVIEW.md  openapi.yaml
libs/bookverse-core/: MIGRATION_IMPROVEMENTS.md  README.md
libs/bookverse-core/bookverse_core/: __init__.py
libs/bookverse-core/bookverse_core/api/: __init__.py  app_factory.py  exceptions.py  health.py  middleware.py  pagination.py  responses.py
libs/bookverse-core/bookverse_core/auth/: __init__.py  dependencies.py  health.py  jwt_auth.py  middleware.py  oidc.py
libs/bookverse-core/bookverse_core/config/: __init__.py  base.py  loaders.py  validation.py
libs/bookverse-core/bookverse_core/database/: __init__.py  pagination.py  session.py
libs/bookverse-core/bookverse_core/utils/: __init__.py  logging.py  validation.py
libs/bookverse-core/tests/: conftest.py
libs/bookverse-core/tests/unit/: test_api.py  test_auth.py  test_config.py
scripts/: analyze-commit.sh  apptrust_rollback.py  download_images.py  semver_versioning.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_simple.py
