[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookverse-inventory"
version = "1.0.0"
description = "BookVerse Inventory Service - Demo microservice for JFrog AppTrust showcase"
readme = "README.md"
license = "MIT"
authors = [
    {name = "BookVerse Demo Team", email = "demo@bookverse.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "httpx==0.25.2",
    "pytest-cov==4.1.0",
]
dev = [
    "pytest==7.4.3",
    "httpx==0.25.2",
    "pytest-cov==4.1.0",
    "black==23.9.1",
    "isort==5.12.0",
    "mypy==1.5.1",
]

[project.urls]
Homepage = "https://github.com/yonatanp-jfrog/bookverse-inventory"
Repository = "https://github.com/yonatanp-jfrog/bookverse-inventory"
Documentation = "https://github.com/yonatanp-jfrog/bookverse-inventory#readme"

[project.scripts]
bookverse-inventory = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=html --cov-report=xml --cov-report=term-missing"
minversion = "6.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
